Resolved merge conflicts

--- a/login.html
+++ b/login.html
@@ -101,7 +101,7 @@
         messageDiv.className = "success";
         setTimeout(() => {
           if (role === "seller") window.location.href = "seller.html";
-          else window.location.href = "customer.html";
+          else window.location.href = "custdashboard.html";
         }, 1500);
       } catch (err) {
         messageDiv.textContent = "Error: " + err.message;
