--- a/index.html
+++ b/index.html
@@ -4,86 +4,271 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>MyShop - Multi Seller E-Commerce</title>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500;700&display=swap" rel="stylesheet"/>
   <style>
     body {
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      font-family: 'Montserrat', Arial, sans-serif;
       background: #f7fafd;
       margin: 0;
       padding: 0;
       min-height: 100vh;
+      display: flex;
+      flex-direction: column;
     }
     header {
-      background: #0070f3;
+      background: linear-gradient(90deg,#232f3e 50%,#0070f3 100%);
       color: #fff;
-      padding: 1.5rem 0;
+      padding: 2.2rem 0 1.2rem 0;
       text-align: center;
-      letter-spacing: 1.2px;
+      box-shadow: 0 4px 14px #0001;
+      position: relative;
+      z-index: 2;
+    }
+    header .logo {
+      font-weight: 700;
+      font-size: 2.8rem;
+      letter-spacing: 1.5px;
+      margin-bottom: 0.45rem;
+      line-height: 1;
+    }
+    header .platform-title {
+      font-size: 1.12rem;
+      font-weight: 500;
+      opacity: 0.87;
+    }
+    .nav-bar {
+      position: absolute;
+      top: 16px;
+      right: 34px;
+      display: flex;
+      gap: 1.2rem;
+    }
+    .nav-link {
+      color: #fff;
+      font-weight: 600;
+      text-decoration: none;
+      font-size: 1rem;
+      background: transparent;
+      padding: 0.4rem 1.35rem;
+      border-radius: 4px;
+      margin-left: 0.3rem;
+      transition: background 0.12s;
+    }
+    .nav-link:hover {
+      background: #f1f8ff22;
+      color: #ceeaff;
     }
     main {
+      flex: 1 0 auto;
       display: flex;
       flex-direction: column;
       align-items: center;
-      margin-top: 50px;
-    }
-    h1 {
-      color: #0070f3;
-      font-size: 2.3rem;
-    }
-    .subtitle {
-      color: #333;
-      font-size: 1.2rem;
+      justify-content: flex-start;
+      margin-top: 56px;
       margin-bottom: 32px;
     }
-    .nav-buttons {
-      display: flex;
-      gap: 1.5rem;
-      margin-bottom: 40px;
+    .hero {
+      text-align: center;
+      margin-bottom: 34px;
     }
-    a.button {
-      padding: 0.9rem 2.2rem;
-      font-size: 1.05rem;
-      background: #0070f3;
+    .hero-title {
+      font-size: 2.35rem;
+      font-weight: 700;
+      color: #121820;
+      margin-bottom: 0.9rem;
+      letter-spacing: 0.6px;
+    }
+    .hero-desc {
+      color: #303538;
+      font-size: 1.15rem;
+      font-weight: 500;
+      margin-bottom: 2.2rem;
+      letter-spacing: 0.06rem;
+    }
+    .cta-buttons {
+      display: flex;
+      justify-content: center;
+      gap: 1.5rem;
+      margin-bottom: 30px;
+    }
+    .cta-btn {
+      padding: 1.07rem 2.5rem;
+      font-size: 1.07rem;
+      font-weight: 700;
+      background: linear-gradient(90deg,#0171f3 65%,#23c3fe 100%);
       color: #fff;
       text-decoration: none;
-      border-radius: 6px;
-      box-shadow: 0 2px 8px #0070f332;
-      transition: background 0.2s;
-      font-weight: 600;
+      border: 0;
+      border-radius: 7px;
+      box-shadow: 0 2px 9px #6cf4fa15;
+      cursor: pointer;
+      transition: background 0.18s,transform 0.1s;
+      letter-spacing: 0.04em;
+      outline: none;
     }
-    a.button:hover {
+    .cta-btn:hover {
       background: #005bb5;
+      color: #ffe978;
+      transform: translateY(-2px) scale(1.0105);
+    }
+    .hero-illus {
+      width: 355px;
+      max-width: 85vw;
+      margin-top: 18px;
+      margin-bottom:18px;
+      border-radius:13px;
+      box-shadow:0 4px 26px #0070f311;
+    }
+    .features-row {
+      display: flex;
+      justify-content: center;
+      gap: 3.5rem;
+      margin: 0 0 1.5rem 0;
+      flex-wrap: wrap;
+    }
+    .feature-card {
+      background: #fff;
+      border-radius: 8px;
+      box-shadow: 0 4px 22px #0070f31a;
+      padding: 1.5rem 1.6rem;
+      min-width: 235px;
+      margin: 0.2rem 1.3rem;
+      margin-bottom: 0.8rem;
+      text-align: center;
+      font-weight: 600;
+      font-size: 1.07rem;
+      color: #224;
+      letter-spacing: 0.02em;
     }
     footer {
-      text-align: center;
-      padding: 2rem 0 0.8rem 0;
-      font-size: 0.95rem;
-      color: #888;
-      position: fixed;
+      background: #232f3e;
+      color: #d1e4f9;
+      padding: 2.5rem 2rem 0.9rem 2rem;
       width: 100%;
-      bottom: 0;
-      background: #f7fafd;
+      position: relative;
+    }
+    .footer-row {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 2.8rem;
+      max-width: 1170px;
+      margin: 0 auto;
+      justify-content: center;
+      border-bottom: 1px solid #29568644;
+      padding-bottom: 1.3rem;
+      margin-bottom: 0.6rem;
+    }
+    .footer-block {
+      min-width: 200px;
+      flex: 1 1 260px;
+      margin: 0 1rem;
+    }
+    .footer-block h3 {
+      color: #45c3ff;
+      font-size: 1.13rem;
+      margin-bottom: 9px;
+      font-weight: bold;
+      letter-spacing: 0.07em;
+    }
+    .footer-block ul {
+      list-style: none;
+      padding: 0;
+      margin: 0;
+    }
+    .footer-block li {
+      margin-bottom: 7px;
+      color: #dff;
+      font-weight: 500;
+      font-size: 0.98rem;
+    }
+    .footer-bottom {
+      text-align: center;
+      color: #b6d5f6;
+      font-size: 0.97rem;
+      margin-top: 1.2rem;
+    }
+    @media (max-width: 850px) {
+      main { margin-top: 28px;}
+      .features-row {flex-direction: column; align-items:center;}
+      .footer-row { flex-direction: column; gap: 1.5rem;}
+    }
+    @media (max-width: 600px){
+      .footer-block{ min-width: unset;}
+      .footer-row{ gap: 1rem; }
+      .cta-btn{ font-size: 0.98rem; padding: 0.80rem 1.7rem;}
+      .hero-desc { font-size: 1.01rem;}
     }
   </style>
 </head>
 <body>
 <header>
-  <div style="font-size:2.4rem;font-weight:bold;">MyShop</div>
-  <div style="font-size:1.08rem;margin-top:0.24rem;opacity:0.85;">Multi Seller E-Commerce Platform</div>
+  <div class="logo">MyShop</div>
+  <div class="platform-title">Multi Seller E-Commerce Platform</div>
+  <nav class="nav-bar">
+    <a href="login.html" class="nav-link">Login</a>
+    <a href="signup.html" class="nav-link">Sign Up</a>
+    <a href="custdashboard.html" class="nav-link">Browse Products</a>
+    <a href="seller_order.html" class="nav-link">Seller Dashboard</a>
+  </nav>
 </header>
 <main>
-  <h1>Welcome to MyShop!</h1>
-  <div class="subtitle">
-    An easy and secure place for both sellers and customers.<br>
-    <span style="color:#e91e63;font-size:1rem">Start Selling or Shopping Now!</span>
-  </div>
-  <div class="nav-buttons">
-    <a class="button" href="login.html">Login</a>
-    <a class="button" href="signup.html">Sign Up</a>
-    <!-- <a class="button" href="products.html">Browse Products</a> -->
+  <section class="hero">
+    <div class="hero-title">Welcome to MyShop!</div>
+    <div class="hero-desc">
+      The all-in-one place for sellers and buyers to connect, buy and grow.<br>
+      Inspired by the best of <span style="color:#2ea3f9;font-weight:700;">Amazon</span> &amp; <span style="color:#ff3301;font-weight:700;">Flipkart</span>.<br/>
+      Start selling or shopping now with next-gen features.
+    </div>
+    <div class="cta-buttons">
+      <a class="cta-btn" href="login.html">Login</a>
+      <a class="cta-btn" href="signup.html">Sign Up</a>
+      <a class="cta-btn" href="custdashboard.html">Browse Products</a>
+    </div>
+    <div style="display:flex;align-items:center;justify-content:center;gap:22px;">
+      <img src="logo_trolley_myshop_bright.jpg" alt="MyShop Logo" style="width:70px;height:70px;border-radius:12px;box-shadow:0 3px 18px #0070f326;background:white;">
+      </div>
+  </section>
+  <div class="features-row">
+    <div class="feature-card">Multi-Seller Marketplace</div>
+    <div class="feature-card">Seamless GST Billing & Reports</div>
+    <div class="feature-card">Instant Order Dispatch & Tracking</div>
+    <div class="feature-card">Responsive UI for Mobile & Desktop</div>
   </div>
 </main>
 <footer>
-  &copy; 2025 MyShop. All rights reserved.
+  <div class="footer-row">
+    <div class="footer-block">
+      <h3>Contact Details</h3>
+      <ul>
+        <li>Email: myshopallinall@gmail.com</li>
+        <li>website: myshopallinall1.web.app</li>
+        <li>Phone: +91 98654 35966</li>
+        <li>Chennai, Tamil Nadu, India</li>
+      </ul>
+    </div>
+    <div class="footer-block">
+      <h3>Quick Links</h3>
+      <ul>
+        <li><a href="login.html" style="color:#dff;">Login</a></li>
+        <li><a href="signup.html" style="color:#dff;">Sign Up</a></li>
+        <li><a href="custdashboard.html" style="color:#dff;">Products</a></li>
+        <li><a href="seller_order.html" style="color:#dff;">Seller Dashboard</a></li>
+        <li><a href="https://myshopallinall1.web.app/feedback.html" style="color:#dff;">FEEDBACK</a>
+          </li>
+
+      </ul>
+    </div>
+    <div class="footer-block">
+      <h3>About</h3>
+      <ul>
+        <li>MyShop is a smart e-commerce platform<br/>for Indian MSMEs and growing businesses.</li>
+        <li>GST Ready &middot; Cloud Secure &middot; Fast Support</li>
+      </ul>
+    </div>
+  </div>
+  <div class="footer-bottom">
+    &copy; 2025 MyShop. All rights reserved.
+  </div>
 </footer>
 </body>
 </html>
